frontend/test/should_fail/array_removeIf_exec_index_match.grg
rule array_map_exec(ref a:array<int>) {
	modify {
		---
		exec({ aa:array<int> = a.removeIf{idx:match<array_map_exec> -> value:int -> idx % 2 == 1} });
	}
}
